# rust-chat-server

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/data/: message.rs  user.rs
src/db/: friendship.rs  message.rs  mock_data.rs  mod.rs  user.rs
src/server/: chat_server.rs  mod.rs
src/server/http/: friend_list.rs  http_server.rs  message.rs  mod.rs  test_endpoints.rs
src/server/websocket/: auth.rs  chat_server.rs
