[package]
name = "chatApp"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
once_cell = "1.20.2"
rusqlite = "0.29.0"  # Check for the latest version on crates.io
uuid = { version = "1.4", features = ["v4"] }  # v4 generates random UUIDs
